Fixed test file AirlineClientTest.java